--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,15 +2,7 @@
     margin: 0;
     font-family: "Cambria";
 }
-/* .header{
-    margin: 1px;
-    padding: 1px;
-    position: absolute;
-    z-index: 1;
-    border: 1px red dashed;
-    width: 60vh;
-   
-} */
+
 /* Animacione ZOOM */
 @keyframes zoom{
     from{
@@ -36,13 +28,16 @@
 /*Animacion ZOOM imagenes */
 @keyframes imagenes{
     0%{
+        opacity: 0%;
         transform: scale(50%);
         -webkit-transform: scale(50%);
         -moz-transform: scale(50%);
         -ms-transform: scale(50%);
         -o-transform: scale(50%);
+        -webkit-animation:;
 }
     50%{
+        opacity: 75%;
         transform: scale(95%);
         -webkit-transform: scale(95%);
         -moz-transform: scale(95%);
@@ -50,6 +45,7 @@
         -o-transform: scale(95%);
 }
     100%{
+        opacity: 100%;
         transform: scale(100%);
         -webkit-transform: scale(100%);
         -moz-transform: scale(100%);
@@ -107,7 +103,7 @@ img.logo_instants{
 
 .mensaje{
     /* background-color: rgba(255,255,255,0.4); */
-    border: 1px red dashed;
+    /* border: 1px red dashed; */
     width: 70%;
     margin: 0px;
     opacity: 0;
@@ -142,7 +138,7 @@ img.logo_instants{
 
 /* Seccion Ultimos trabajos */
 .last-job{
-    border: 1px red dashed;
+    /* border: 1px red dashed; */
     margin: 0;
     padding: 0;
     height: 100%;
@@ -153,7 +149,7 @@ img.logo_instants{
 /*F IN SECCION ULTIMOS TRABAJOS +/
 /*Seccion instants*/
 .instants{
-    border: 1px red dashed;
+    /* border: 1px red dashed; */
     height: 100%;
     width: 100%;
     /* overflow: hidden; */
@@ -176,7 +172,7 @@ img.logo_instants{
 
 /*Seccion clickmobilland*/
 .playmoclickland{
-    border: 1px red dashed;
+    /* border: 1px red dashed; */
     height: 100%;
     width: 100%;
     margin: 0px;
@@ -205,7 +201,7 @@ img.logo_instants{
 
 /*Seccion Dioramas*/
 .dioramas{
-    border: 1px red dashed;
+    /* border: 1px red dashed; */
     height: 100%;
     width: 100%;
     /* overflow: hidden; */
@@ -216,7 +212,7 @@ img.logo_instants{
     /* max-width: 1800px; */
     margin-top: 0;
     padding: 0;
-    height: 100%;
+    width: 100%;
 }
 .fondo_dioramas{
     width: 100%;
@@ -262,7 +258,3 @@ img.logo_instants{
 
     animation-name: mensaje;
 }
-/* .mensaje_dioramas{
-    margin-left: 40%;
-    font-size: 60px;
-} */
