--- a/css/estilos.css
+++ b/css/estilos.css
@@ -258,3 +258,110 @@ img.logo_instants{
 
     animation-name: mensaje;
 }
+
+/*PARA LAS ROTACIONES*/
+@keyframes roll {
+    0% {
+      font-size: 0px;
+      opacity: 0;
+      margin-left: -30px;
+      margin-top: 0px;
+      transform: rotate(-25deg);
+    }
+    3% {
+      opacity: 1;
+      transform: rotate(0deg);
+    }
+    5% {
+      font-size: inherit;
+      opacity: 1;
+      margin-left: 0px;
+      margin-top: 0px;
+    }
+    20% {
+      font-size: inherit;
+      opacity: 1;
+      margin-left: 0px;
+      margin-top: 0px;
+      transform: rotate(0deg);
+    }
+    27% {
+      font-size: 0px;
+      opacity: 0.5;
+      margin-left: 20px;
+      margin-top: 100px;
+    }
+    100% {
+      font-size: 0px;
+      opacity: 0;
+      margin-left: -30px;
+      margin-top: 0px;
+      transform: rotate(15deg);
+    }
+  }
+@keyframes roll2 {
+    0% {
+      font-size: 0px;
+      opacity: 0;
+      margin-left: -30px;
+      margin-top: 0px;
+      transform: rotate(-25deg);
+    }
+    3% {
+      opacity: 1;
+      transform: rotate(0deg);
+    }
+    5% {
+      font-size: inherit;
+      opacity: 1;
+      margin-left: 0px;
+      margin-top: 0px;
+    }
+    30% {
+      font-size: inherit;
+      opacity: 1;
+      margin-left: 0px;
+      margin-top: 0px;
+      transform: rotate(0deg);
+    }
+    37% {
+      font-size: 1500px;
+      opacity: 0;
+      margin-left: -1000px;
+      margin-top: -800px;
+    }
+    100% {
+      font-size: 0px;
+      opacity: 0;
+      margin-left: -30px;
+      margin-top: 0px;
+      transform: rotate(15deg);
+    }
+} 
+.card {
+    position: relative;
+    /* width: 100%;
+    height: 100%; */
+    cursor: pointer;
+    border: 2px solid #fe0000;
+    transform-style: preserve-3d;
+    transform-origin: center right;
+    transition: transform 1s;
+}
+.card__face {
+    color: white;
+    backface-visibility: hidden;
+  }
+  
+.card__face--front {
+    background: rgb(255, 255, 255);
+}
+.card__face--back {
+    background: rgb(255, 255, 255);
+    transform: rotateY(180deg);
+    color: black;
+}
+
+.card.is-flipped {
+    transform: translateX(-100%) rotateY(-180deg);
+}
