--- a/css/estilos.css
+++ b/css/estilos.css
@@ -359,11 +359,16 @@ img.logo_instants{
   
 .card__face--front {
     background: rgb(255, 255, 255);
+   
+    
 }
 .card__face--back {
-    background: rgb(255, 255, 255);
+    background: rgb(1, 1, 1);
     transform: rotateY(180deg);
+    height:80px;
+    /* position: absolute; */
     color: black;
+    
 }
 
 .card.is-flipped {
@@ -373,4 +378,13 @@ img.logo_instants{
 
 /*PARA LAS TARJETAS VOLTEADAS*/
 
+.ocultar{
+    width: 0%;
+    height: 0%;
+}
+.mostrar{
+    /* width:100; */
+    height:40vh;
+    background-color: rgb(46, 255, 70);
+}
 /*FIN DE LAS TARAJETAS VOLTEADAS*/
