--- a/css/estilos.css
+++ b/css/estilos.css
@@ -368,6 +368,8 @@ img.logo_instants{
     height:80px;
     /* position: absolute; */
     color: black;
+    margin: 0%;
+    padding: 0%;
     
 }
 
@@ -381,10 +383,25 @@ img.logo_instants{
 .ocultar{
     width: 0%;
     height: 0%;
+    margin: 0%;
+    padding: 0%;
 }
 .mostrar{
-    /* width:100; */
-    height:40vh;
+    /* width:100; */ 
+    height:50vmax;
     background-color: rgb(46, 255, 70);
+}
+.mensaje_secciones_2{
+    font-size: 20px;
+    position: absolute;
+    padding: 3px;
+    padding-right: 10px;
+    margin-left:10%;
+    margin-top:20px;
+    z-index: 1;
+    color: rgb(255, 255, 255);
+    text-shadow: 1px 1px 2px red, 0 0 1em rgb(0, 0, 0), 0 0 0.2em rgb(5, 5, 5);
+    border-right: 3px rgb(255, 255, 255) solid;
+    
 }
 /*FIN DE LAS TARAJETAS VOLTEADAS*/
