--- a/css/estilos2.css
+++ b/css/estilos2.css
@@ -45,8 +45,7 @@ a{
 }
 
 /*FIN ANIMACIONES*/
-.contenedor{
-    border: 1px rgb(255, 0, 0) solid;
+
     
 
 .contenedor{
@@ -56,7 +55,7 @@ a{
     flex-direction: column; 
     align-items: left;
     padding: 0 5px;
-    
+    overflow: hidden;
 }
 }
 .video-container{
@@ -112,7 +111,7 @@ a{
 
     animation-duration: 10s;
     animation-name: enlaces_instants;
-    animation-iteration-count: infinite;
+    animation-iteration-count: 1;
     animation-direction: alternate;
 }
 .playmoclickland{
@@ -128,7 +127,7 @@ a{
 
     animation-duration: 10s;
     animation-name: enlaces_click;
-    animation-iteration-count: infinite;
+    animation-iteration-count: 1;
     animation-direction: alternate;
 }
 .dioramas{
@@ -144,7 +143,7 @@ a{
 
     animation-duration: 10s;
     animation-name: enlaces_dioramas;
-    animation-iteration-count: infinite;
+    animation-iteration-count: 1;
     animation-direction: alternate;
 }
 .enlaces{
