empezamos los enlaces...

--- a/css/estilos2.css
+++ b/css/estilos2.css
@@ -4,11 +4,7 @@
     padding: 0;
     font-family: "Cambria";
 }
-a{
-    text-decoration: none;
-    color: rgb(255, 255, 255);
-    
-}
+
 /*ANIMACIONES*/
 @keyframes enlaces_instants{
     0%{
@@ -79,15 +75,7 @@ a{
     -ms-transform: translate(-50%,-50%);
     -o-transform: translate(-50%,-50%);
 }
-/* .video-container::after{
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0,0,0,0.6);
-} */
+
 .logo{
     z-index: 10;
     position: fixed;
@@ -104,7 +92,7 @@ a{
     font-weight: 700;
     font-size: 3vmax;
     width: 30vmax;
-    overflow: hidden;
+    /* overflow: hidden; */
     position: absolute;
     top: 30%;
     left: 30%;
@@ -114,9 +102,21 @@ a{
     animation-iteration-count: 1;
     animation-direction: alternate;
 }
+.enlaces_instants{
+    font-size: 2vmax;
+
+    left: -40%;
+    position: absolute;
+    width: 320px;
+    height: 500px;
+    background-color: green;
+    visibility: visible;
+    
+    
+}
 .playmoclickland{
     border: 1px rgb(255, 0, 0) solid;
-    z-index: 10;
+    z-index: 9;
     font-weight: 700;
     font-size: 3vmax;
     width: 30vmax;
@@ -132,7 +132,7 @@ a{
 }
 .dioramas{
     border: 1px rgb(255, 0, 0) solid;
-    z-index: 10;
+    z-index: 8;
     font-weight: 700;
     font-size: 3vmax;
     width: 30vmax;
@@ -147,8 +147,9 @@ a{
     animation-direction: alternate;
 }
 .enlaces{
+    color: rgb(255, 255, 255);
     padding: 5px;
     border-right: 3px rgb(255, 255, 255) solid;
     border-left: 3px rgb(255, 255, 255) solid;
-    text-shadow: 1px 3px 5px red, 0 0 1em rgb(0, 0, 0), 0 0 0.2em rgb(5, 5, 5);
+    text-shadow: 1px 3px 10px rgb(0, 255, 102), 0 0 1em rgb(0, 0, 0), 0 0 0.2em rgb(5, 5, 5);
 }
