--- a/css/estilos.css
+++ b/css/estilos.css
@@ -211,7 +211,7 @@ img.logo_instants{
 .fondo_dioramas{
     width: 100%;
     /* height: 100%; */
-    margin: 0px;
+    margin-top: 5px;
      
     /* scale: 200%; */
 
@@ -357,7 +357,7 @@ img.logo_instants{
     
 }
 .card__face--back {
-    background: rgb(1, 1, 1);
+    background: rgb(255, 255, 255);
     transform: rotateY(180deg);
     height:80px;
     /* position: absolute; */
@@ -382,8 +382,10 @@ img.logo_instants{
 }
 .mostrar{
     /* width:100; */ 
+    border: 3px rgb(255, 255, 255) solid;
     height:50vmax;
     background-color: rgb(46, 255, 70);
+    margin-top: 10px;
 }
 .mensaje_secciones_2{
     font-size: 20px;
