--- a/css/estilos2.css
+++ b/css/estilos2.css
@@ -14,6 +14,7 @@
         top: 50%;
     } */
     100%{
+        text-shadow: 1px 3px 10px rgb(0, 255, 102), 0 0 1em rgb(0, 0, 0), 0 0 0.2em rgb(5, 5, 5);
         top: 30%;
     }
 }
@@ -53,7 +54,7 @@
     padding: 0 5px;
     overflow: hidden;
 }
-}
+
 .video-container{
     position: absolute;
     top: 0;
@@ -95,9 +96,20 @@
     padding: 5px;
     border-right: 3px rgb(255, 255, 255) solid;
     border-left: 3px rgb(255, 255, 255) solid;
-    text-shadow: 1px 3px 10px rgb(0, 255, 102), 0 0 1em rgb(0, 0, 0), 0 0 0.2em rgb(5, 5, 5);
+    text-shadow: 50px 3px 10px rgb(0, 255, 102), 0 0 1em rgb(0, 0, 0), 0 0 0.2em rgb(5, 5, 5);
 }
 
+.mensaje{
+    z-index: 9;
+    border: 1px rgb(255, 0, 0) solid;
+    width: 50%;
+    height: 10%;
+}
+.mensaje > p{
+    color: white;
+    text-align: right;
+    size: 10%;
+}
 
 /* ZONA INSTANTS */
 .instants{
@@ -117,12 +129,12 @@
     animation-direction: alternate;
 }
 .enlaces_instants{
-    border: 1px rgb(255, 255, 255) solid;
+    border: 3px rgb(255, 255, 255) solid;
     font-size: 2vmax;
 
-    left: -20%;
+    left: -40%;
     position: absolute;
-    width: 120%;
+    width: 140%;
     
     /* background-color: green; */
     visibility: visible;
