--- a/css/estilos.css
+++ b/css/estilos.css
@@ -29,33 +29,22 @@
     }
 }
 /*Animacion ZOOM imagenes */
-@keyframes imagenes{
+@keyframes fade-in{
     0%{
-        opacity: 30%;
-        transform: scale(50%);
-        -webkit-transform: scale(50%);
-        -moz-transform: scale(50%);
-        -ms-transform: scale(50%);
-        -o-transform: scale(50%);
-        -webkit-animation:;
-}
+        opacity: 90%;
+        
+    }
     50%{
-        opacity: 85%;
-        transform: scale(95%);
-        -webkit-transform: scale(95%);
-        -moz-transform: scale(95%);
-        -ms-transform: scale(95%);
-        -o-transform: scale(95%);
-}
-    90%{
+        opacity: 50%;
+    }
+    100%{
         opacity: 100%;
-        transform: scale(100%);
-        -webkit-transform: scale(100%);
-        -moz-transform: scale(100%);
-        -ms-transform: scale(100%);
-        -o-transform: scale(100%);
+        
+    }
 }
-}
+
+
+
 
 /*Animacion MENSAJES_SECCIONES*/
 @keyframes mensaje{
@@ -158,11 +147,13 @@ img.logo_instants{
     width: 100%;
     height: 100%;
     margin: 0px;
-    view-timeline-name: --imagenes;
+
+    view-timeline-name: --fade-in;
     view-timeline-axis: block;
-    animation-timeline: --imagenes;
-    animation-name: imagenes;
-    
+
+    animation-timeline: --fade-in;
+
+    animation-name: fade-in;
 }
 
 /* FIN SEECCION INSTANTS */
@@ -170,9 +161,13 @@ img.logo_instants{
 /*Seccion clickmobilland*/
 .playmoclickland{
     height: 100%;
-    width: 100%;
-    margin: 0px;
+    /* width: 100%; */
+    margin: 0%;
+    padding: 0%;
     background-color: rgb(255, 255, 255);
+
+   
+    
     /* overflow: hidden; */
 }
 
@@ -180,14 +175,21 @@ img.logo_instants{
     width: 100%;
     height: 100%;
     margin: 0px;
-     
+
+    view-timeline-name: --fade-in;
+    view-timeline-axis: block;
+
+    animation-timeline: --fade-in;
+
+    animation-name: fade-in;
+
     /* scale: 200%; */
 
-    view-timeline-name: --imagenes;
+    /* view-timeline-name: --imagenes;
     view-timeline-axis: block;
 
     animation-timeline: --imagenes;
-    animation-name: imagenes;
+    animation-name: imagenes; */
 
 }
 
@@ -197,7 +199,7 @@ img.logo_instants{
 
 /*Seccion Dioramas*/
 .dioramas{
-    height: 35vh;
+    height: 100%;
     width: 100%;
     /* overflow: hidden; */
     background-color: rgb(255, 255, 255);
@@ -212,16 +214,23 @@ img.logo_instants{
 }
 .fondo_dioramas{
     width: 100%;
-    /* height: 100%; */
-    margin-top: 5px;
+    height: 100%;
+    margin-top: 2px;
+
+    view-timeline-name: --fade-in;
+    view-timeline-axis: block;
+
+    animation-timeline: --fade-in;
+
+    animation-name: fade-in;
      
     /* scale: 200%; */
 
-    view-timeline-name: --imagenes;
+    /* view-timeline-name: --imagenes;
     view-timeline-axis: block;
 
     animation-timeline: --imagenes;
-    animation-name: imagenes;
+    animation-name: imagenes; */
 }
 
 
@@ -230,7 +239,7 @@ img.logo_instants{
 /* SECCION EN BLANCO */
 .seccion_blanco{
     width: 100%;
-    height: 30vh;
+    height: 10vh;
     margin: 0px;
 }
 
@@ -246,14 +255,17 @@ img.logo_instants{
     margin-top:20%;
     z-index: 1;
     color: rgb(255, 255, 255);
+    border-right: 3px rgb(255, 255, 255) solid;
+    text-shadow: 1px 5px 2px rgb(2, 2, 2), 0 0 1em rgb(0, 0, 0), 0 0 0.2em rgb(5, 5, 5);
+
     
 
-    view-timeline-name: --mensaje;
+    /* view-timeline-name: --mensaje;
     view-timeline-axis: block;
 
     animation-timeline: --mensaje;
 
-    animation-name: mensaje;
+    animation-name: mensaje; */
 
     
 }
@@ -341,7 +353,8 @@ img.logo_instants{
     position: relative;
     /*width: 100%;
     height: 100%;
-    */cursor: pointer;
+    */
+    cursor: pointer;
     transform-style: preserve-3d;
     transform-origin: center right;
     transition: transform 1s;
@@ -363,12 +376,15 @@ img.logo_instants{
 .card__face--back {
     background: rgb(255, 255, 255);
     transform: rotateY(180deg);
-    height:80px;
-    /* position: absolute; */
-    color: black;
+    /* height:80px;  */
+    /*position: absolute;
+    */color: black;
     margin: 0%;
     padding: 0%;
-    
+    -webkit-transform: rotateY(180deg);
+    -moz-transform: rotateY(180deg);
+    -ms-transform: rotateY(180deg);
+    -o-transform: rotateY(180deg);
 }
 
 .card.is-flipped {
@@ -420,8 +436,8 @@ img.logo_instants{
 	height:50vmax;
 	background-color: rgb(46, 255, 70);
 	margin-top: 10px;
-	-webkit-animation: color-change-2x 4s linear infinite alternate both;
-	animation: color-change-2x 4s linear infinite alternate both;
+	-webkit-animation: color-change-2x 8s linear infinite alternate both;
+	animation: color-change-2x 8s linear infinite alternate both;
 }
 .mensaje_secciones_2{
     font-size: 15px;
