--- a/css/estilos2.css
+++ b/css/estilos2.css
@@ -66,7 +66,7 @@
 .video{
     min-height: 100%;
     min-width: 100%;
-    object-fit: cover;
+    object-fit:cover;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -94,22 +94,36 @@
 .enlaces{
     color: rgb(255, 255, 255);
     padding: 5px;
-    border-right: 3px rgb(255, 255, 255) solid;
-    border-left: 3px rgb(255, 255, 255) solid;
+    /* border-right: 3px rgb(255, 255, 255) solid;
+    border-left: 3px rgb(255, 255, 255) solid; */
     text-shadow: 50px 3px 10px rgb(0, 255, 102), 0 0 1em rgb(0, 0, 0), 0 0 0.2em rgb(5, 5, 5);
 }
 
 .mensaje{
     z-index: 9;
     border: 1px rgb(255, 0, 0) solid;
-    width: 50%;
+    width: 60%;
     height: 10%;
+    margin-top: 15vmax;
 }
 .mensaje > p{
     color: white;
-    text-align: right;
+    text-align: left;
     size: 10%;
 }
+
+.mensaje >a{
+    color: white;
+    font-size: 10px;
+    text-decoration: none;
+
+}
+.logo_facebook{
+    width: 5%;
+    margin-top: 5px;
+    
+}
+
 
 /* ZONA INSTANTS */
 .instants{
