--- a/css/estilos2.css
+++ b/css/estilos2.css
@@ -70,11 +70,11 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
-    -webkit-transform: translate(-50%,-50%);
-    -moz-transform: translate(-50%,-50%);
-    -ms-transform: translate(-50%,-50%);
-    -o-transform: translate(-50%,-50%);
+    transform:  translate(-60%,-50%);
+    -webkit-transform:  translate(-60%,-50%);
+    -moz-transform:  translate(-60%,-50%);
+    -ms-transform:  translate(-60%,-50%);
+    -o-transform:  translate(-60%,-50%);
 }
 
 .logo{
@@ -83,7 +83,7 @@
 }
 .logo_instants{
     z-index: 10;
-    width: 30%;
+    width: 200px;
     height: 30%;
     margin: 10px;
 }
@@ -119,7 +119,7 @@
 
 }
 .logo_facebook{
-    width: 5%;
+    width: 10px;
     margin-top: 5px;
     
 }
