--- a/css/estilos2.css
+++ b/css/estilos2.css
@@ -287,12 +287,13 @@ body{
     margin-left: 3px;
     margin-top: 20px;
     overflow: hidden;
+    opacity: 0.9;
     /* position: fixed; */
 
     /* flex-grow: 5; */
 }
 .imagens_instants{
-    width: 100%;
+    max-height: 100px;
 
 }
 .carrusel_play{
@@ -302,10 +303,11 @@ body{
     margin-left: 100px;
     margin-top: 100px;
     overflow: hidden;
+    opacity: 0.9;
     /* flex-grow: 1; */
 }
 .imagens_play{
-    width: 100%;
+    max-height: 100px;
 }
 .carrusel_dioramas{
     width:50%;
@@ -314,10 +316,10 @@ body{
     margin: 0px auto; 
     margin-top: 150px;
     overflow: hidden;
-
+    opacity: 0.9;
     /* flex-grow: 1; */
 }
 .imagens_dioramas{
-    width: 100%;
+    max-height: 100px;
 }
 /* FIN ZONA CARRUSEL */
