a falta de imagenes "oficiales"

--- a/css/estilos2.css
+++ b/css/estilos2.css
@@ -15,12 +15,12 @@ body{
         left: 100%;
     }
     25%{
-        top: 50%;
+        top: 30%;
         text-shadow: 1px 3px 5px rgb(0, 255, 102), 0 0 1em rgb(0, 0, 0), 0 0 0.2em rgb(5, 5, 5);
     }
     100%{
         text-shadow: 1px 3px 10px rgb(0, 255, 102), 0 0 1em rgb(0, 0, 0), 0 0 0.2em rgb(5, 5, 5);
-        top: 25%;
+        top: 15%;
     }
 }
 @keyframes enlaces_click{
@@ -194,7 +194,7 @@ body{
     width: 30vmax;
     /* overflow: hidden; */
     position: absolute;
-    top: 25%;
+    top: 15%;
     left: 30%;
 
     animation-duration: 10s;
@@ -273,7 +273,7 @@ body{
     width: 100%;
     height: 100%;
     overflow: hidden;
-    border: 1px rgb(255, 0, 0) solid;
+    /* border: 1px rgb(255, 0, 0) solid; */
     align-items: center;
 
     /* display: flex;
@@ -283,7 +283,7 @@ body{
     
     /* height: 33%; */
     width: 50%;
-    border: 1px rgb(255, 0, 0) solid;
+    /* border: 1px rgb(255, 0, 0) solid; */
     margin-left: 3px;
     margin-top: 20px;
     overflow: hidden;
@@ -293,13 +293,13 @@ body{
     /* flex-grow: 5; */
 }
 .imagens_instants{
-    max-height: 100px;
+    max-height: 150px;
 
 }
 .carrusel_play{
     width:60%;
     /* height: 33%; */
-    border: 1px rgb(255, 0, 0) solid;
+    /* border: 1px rgb(255, 0, 0) solid; */
     margin-left: 100px;
     margin-top: 100px;
     overflow: hidden;
@@ -307,19 +307,19 @@ body{
     /* flex-grow: 1; */
 }
 .imagens_play{
-    max-height: 100px;
+    max-height: 150px;
 }
 .carrusel_dioramas{
     width:50%;
     /* height: 33%; */
-    border: 1px rgb(255, 0, 0) solid;
+    /* border: 1px rgb(255, 0, 0) solid; */
     margin: 0px auto; 
-    margin-top: 150px;
+    margin-top: 100px;
     overflow: hidden;
     opacity: 0.9;
     /* flex-grow: 1; */
 }
 .imagens_dioramas{
-    max-height: 100px;
+    max-height: 150px;
 }
 /* FIN ZONA CARRUSEL */
